--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,6 +1,6 @@
  FROM node:18-alpine
- WORKDIR /client
- COPY . /client/
+ WORKDIR /app
+ COPY . /app/
  RUN npm install
  EXPOSE 3000
  CMD npm run dev
