--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -3,7 +3,7 @@
      server_name     localhost;
 
      location / {
-         proxy_pass        http://client:3000/;
+         proxy_pass        http://next-app:3000/;
          proxy_redirect    default;
          proxy_set_header  Host $host;
          proxy_set_header  Upgrade $http_upgrade;
