--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,3 +1,3 @@
- FROM nginx:1.23.3-alpine
+ FROM nginx:1.25-alpine
  RUN rm /etc/nginx/conf.d/default.conf
- COPY ./nginx.conf /etc/nginx/conf.d
+ COPY ./development/nginx.conf /etc/nginx/conf.d
