--- a/docker/nginx/development/nginx.conf
+++ b/docker/nginx/development/nginx.conf
@@ -1,16 +1,38 @@
  server {
-     listen          8080;
-     server_name     localhost;
+    listen          8080;
+    server_name     localhost;
 
-     location / {
-         proxy_pass        http://next-app:3000/;
-         proxy_redirect    default;
-         proxy_set_header  Host $host;
-         proxy_set_header  Upgrade $http_upgrade;
-         proxy_set_header  Connection "upgrade";
-         proxy_set_header  X-Real-IP $remote_addr;
-         proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-         proxy_set_header  X-Forwarded-Host $server_name;
-         proxy_set_header  X-Forwarded-Proto $scheme;
-     }
+    location / {
+        proxy_pass        http://next-app:3000/;
+        proxy_redirect    default;
+        proxy_set_header  Host $host;
+        proxy_set_header  Upgrade $http_upgrade;
+        proxy_set_header  Connection "upgrade";
+        proxy_set_header  X-Real-IP $remote_addr;
+        proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header  X-Forwarded-Host $server_name;
+        proxy_set_header  X-Forwarded-Proto $scheme;
+    }
+
+    location /api {
+        proxy_pass        http://django:8000/;
+        proxy_redirect    default;
+        proxy_set_header  Host $host;
+        proxy_set_header  Upgrade $http_upgrade;
+        proxy_set_header  Connection "upgrade";
+        proxy_set_header  X-Real-IP $remote_addr;
+        proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header  X-Forwarded-Host $server_name;
+        proxy_set_header  X-Forwarded-Proto $scheme;
+    }
+
+    location /django_static/ {
+        autoindex on;
+        alias /home/app/web/django_static;
+    }
+
+    location /media/ {
+        autoindex on;
+        alias /home/app/web/media;
+    }
  }
