--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -70,6 +70,7 @@ RUN pip install --no-cache /wheels/*
 
 # copy project
 COPY server $APP_HOME
+COPY ./server/entrypoint.sh $APP_HOME
 # COPY ../docker/backend/entrypoint.sh $APP_HOME
 
 # chown all the files to the app user
@@ -82,9 +83,9 @@ USER app
 # run entrypoint.prod.sh
 # ENTRYPOINT ["/home/app/web/entrypoint.prod.sh"]
 
-COPY ./server/entrypoint.sh $APP_HOME
-RUN chmod +x /home/app/web/entrypoint.sh
-ENTRYPOINT ["/home/app/web/entrypoint.sh"]
+
+# RUN chmod +x /home/app/web/entrypoint.sh
+# ENTRYPOINT ["/home/app/web/entrypoint.sh"]
 
 ##########################
 ##########################
