--- a/docker/nginx/development/nginx.conf
+++ b/docker/nginx/development/nginx.conf
@@ -14,7 +14,7 @@
         proxy_set_header  X-Forwarded-Proto $scheme;
     }
 
-    location /api {
+    location /admin {
         proxy_pass        http://django:8000/;
         proxy_redirect    default;
         proxy_set_header  Host $host;
