--- a/docker/nginx/development/nginx.conf
+++ b/docker/nginx/development/nginx.conf
@@ -1,11 +1,20 @@
+ upstream next-app_server {
+    server next-app:3000;
+}
+
+upstream django_server {
+    server django:8000;
+}
+
  server {
     listen          8080;
     server_name     localhost;
 
     location / {
-        proxy_pass        http://next-app:3000/;
+        proxy_pass        http://next-app_server;
         proxy_redirect    default;
-        proxy_set_header  Host $host;
+        # proxy_set_header  Host $host;
+        proxy_set_header  Host $http_host;
         proxy_set_header  Upgrade $http_upgrade;
         proxy_set_header  Connection "upgrade";
         proxy_set_header  X-Real-IP $remote_addr;
@@ -15,9 +24,10 @@
     }
 
     location /admin {
-        proxy_pass        http://django:8000/;
+        proxy_pass        http://django_server;
         proxy_redirect    default;
-        proxy_set_header  Host $host;
+        # proxy_set_header  Host $host;
+        proxy_set_header  Host $http_host;
         proxy_set_header  Upgrade $http_upgrade;
         proxy_set_header  Connection "upgrade";
         proxy_set_header  X-Real-IP $remote_addr;
