--- a/docker/nginx/development/nginx.conf
+++ b/docker/nginx/development/nginx.conf
@@ -51,11 +51,11 @@ upstream django_server {
 
     location /django_static/ {
         autoindex on;
-        alias /home/app/web/django_static;
+        alias /home/app/web/django_static/;
     }
 
     location /media/ {
         autoindex on;
-        alias /home/app/web/media;
+        alias /home/app/web/media/;
     }
  }
