--- a/docker/nginx/development/nginx.conf
+++ b/docker/nginx/development/nginx.conf
@@ -13,8 +13,7 @@ upstream django_server {
     location / {
         proxy_pass        http://next-app_server;
         proxy_redirect    default;
-        # proxy_set_header  Host $host;
-        proxy_set_header  Host $http_host;
+        proxy_set_header  Host $host;
         proxy_set_header  Upgrade $http_upgrade;
         proxy_set_header  Connection "upgrade";
         proxy_set_header  X-Real-IP $remote_addr;
@@ -26,8 +25,7 @@ upstream django_server {
     location /api {
         proxy_pass        http://django_server;
         proxy_redirect    default;
-        # proxy_set_header  Host $host;
-        proxy_set_header  Host $http_host;
+        proxy_set_header  Host $host;
         proxy_set_header  Upgrade $http_upgrade;
         proxy_set_header  Connection "upgrade";
         proxy_set_header  X-Real-IP $remote_addr;
