--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ next-env.d.ts
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-media
+# media
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
