--- a/backend/server/.env.dev
+++ b/backend/server/.env.dev
@@ -1,6 +1,6 @@
 DJANGO_SETTINGS_MODULE="server.settings.development"
 DJANGO_SECRET_KEY="django-insecure-zr70fqg+y)rzahs0w%%5!m$#5k+vehq7t$g)8d!tpa-)o)kgoe"
-DEBUG="True"
+DEBUG=True
 SMTP_GMAIL="kamil24940@gmail.com"
 DOMAIN="localhost:3000/users"
 AUTH_COOKIE_SECURE="False"
