--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,8 @@ services:
     container_name: django_rest
     # restart: unless-stopped
     restart: unless-stopped
+    env_file:
+      - backend/server/.env
     build:
       context: .
       dockerfile: docker/backend/Dockerfile
@@ -57,8 +59,8 @@ services:
     ports:
       - 8083:8080
     restart: on-failure
-    extra_hosts:
-      - "host.docker:host-gateway"
+    # extra_hosts:
+    #   - "host.docker:host-gateway"
 
 volumes:
   static_volume:
