--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
   next-app:
     build:
       context: ./frontend
+      target: dev
+      # target: production
       dockerfile: ../docker/frontend/Dockerfile.dev
     expose:
       - 3000
@@ -12,6 +14,8 @@ services:
     volumes:
       - ./frontend/:/frontend
       - /frontend/node_modules
+      - /app/node_modules
+      - /app/.next
 
   django:
     container_name: django_rest
@@ -59,8 +63,6 @@ services:
     ports:
       - 8083:8080
     restart: on-failure
-    # extra_hosts:
-    #   - "host.docker:host-gateway"
 
 volumes:
   static_volume:
