--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,4 +1,5 @@
 # NEXT_PUBLIC_HOST="http://localhost:8080"
-NEXT_PUBLIC_HOST="http://127.0.0.1:8080"
-#NODE_ENV
+# DEBUG=true
+NEXT_PUBLIC_HOST="http://127.0.0.1:8000"
+NODE_ENV="production"
 #NEXT_PUBLIC_REDIRECT_URL
