--- a/docker/nginx/development/nginx.conf
+++ b/docker/nginx/development/nginx.conf
@@ -47,6 +47,19 @@ upstream django_server {
         proxy_set_header  X-Forwarded-Proto $scheme;
     }
 
+    location /dj {
+        proxy_pass        http://django_server;
+        proxy_redirect    default;
+        # proxy_set_header  Host $host;
+        proxy_set_header  Host $http_host;
+        proxy_set_header  Upgrade $http_upgrade;
+        proxy_set_header  Connection "upgrade";
+        proxy_set_header  X-Real-IP $remote_addr;
+        proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header  X-Forwarded-Host $server_name;
+        proxy_set_header  X-Forwarded-Proto $scheme;
+    }
+
     location /django_static/ {
         autoindex on;
         alias /home/app/web/django_static/;
