--- a/docker/nginx/development/nginx.conf
+++ b/docker/nginx/development/nginx.conf
@@ -47,7 +47,7 @@ upstream django_server {
         proxy_set_header  X-Forwarded-Proto $scheme;
     }
 
-    location /dj {
+    location /management {
         proxy_pass        http://django_server;
         proxy_redirect    default;
         # proxy_set_header  Host $host;
