--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # frontend/node_modules
 # **/node_modules
 # backend/server/node_modules
-backend/server/scrapper
+backend/server/scrapper/
 node_modules
 .pnp
 .pnp.js
