--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "base64url": "^3.0.1",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
+    "ioredis": "^5.4.1",
+    "iron-session": "^8.0.1",
     "lodash": "^4.17.21",
     "next": "^14.2.3",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
@@ -33,7 +35,9 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "^14.0.2",
+    "express": "^4.19.2",
     "js-cookie": "^3.0.5",
+    "node-gzip": "^1.1.2",
     "postcss": "^8",
     "sass": "^1.69.0",
     "tailwindcss": "^3",
