--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "backend"
+name = "server"
 version = "0.1.0"
 description = ""
 authors = ["daron035 <kamil249@mail.ru>"]
@@ -17,9 +17,6 @@ drf-spectacular = "^0.26.5"
 gunicorn = "^21.2.0"
 pillow = "^10.1.0"
 psycopg2 = "^2.9.9"
-pytest = "^7.4.3"
-pytest-cov = "^4.1.0"
-pytest-django = "^4.7.0"
 requests = "^2.31.0"
 requests-mock = "^1.11.0"
 selenium = "^4.15.2"
@@ -33,10 +30,51 @@ pandas = "^2.2.0"
 mypy = "^1.10.0"
 ipinfo-django = "^2.0.0"
 
-
 [tool.poetry.group.dev.dependencies]
 isort = "^5.13.2"
+pre-commit = "^3.6.0"
+faker = "^22.6.0"
+pytest = "^8.0.0"
+pytest-django = "^4.8.0"
+factory-boy = "^3.3.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "server.server.settings.development"
+
+
+[tool.isort]
+multi_line_output=3
+include_trailing_comma=true
+line_length=120
+lines_after_imports=2
+lines_between_sections=1
+lines_between_types=0
+force_alphabetical_sort_within_sections=true
+ensure_newline_before_comments=true
+combine_as_imports=true
+combine_star=true
+skip_gitignore=true
+balanced_wrapping=true
+force_grid_wrap=2
+src_paths=["server", ]
+skip_glob=[
+    ".git",
+    ".idea",
+    ".vscode",
+    "venv",
+    ".venv",
+]
+known_django=["django", "rest_framework"]
+known_first_party=["app"]
+sections=[
+    "FUTURE",
+    "STDLIB",
+    "DJANGO",
+    "THIRDPARTY",
+    "FIRSTPARTY",
+    "LOCALFOLDER",
+]
