--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,5 +1,6 @@
 # NEXT_PUBLIC_HOST="http://localhost:8080"
 # DEBUG=true
-NEXT_PUBLIC_HOST="http://127.0.0.1:8000"
+# NEXT_PUBLIC_HOST="http://127.0.0.1:8000"
+NEXT_PUBLIC_HOST="https://1c0d-178-129-103-40.ngrok-free.app"
 NODE_ENV="production"
 #NEXT_PUBLIC_REDIRECT_URL
